# xdg-desktop-portal-gamescope

./: Cargo.toml  README.md  meson.build
data/: gamescope.portal.in  meson.build  org.freedesktop.impl.portal.desktop.gamescope.service.in  xdg-desktop-portal-gamescope.desktop.in  xdg-desktop-portal-gamescope.service.in
src/: access.rs  config.rs.in  gamescope_pipewire.rs  main.rs  meson.build  screencast.rs  screenshot.rs
